--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "sweetalert2": "^11.26.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "sass-embedded": "^1.93.2",
     "vite": "^7.1.7"
   }
 }
