--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.4",
+    "react-router-dom": "^7.9.4",
     "sweetalert2": "^11.26.1",
     "uuid": "^13.0.0"
   },
