--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
@@ -18,7 +19,8 @@
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "sweetalert2": "^11.26.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
