--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
+    "react-spinners": "^0.17.0",
     "sweetalert2": "^11.26.1",
     "uuid": "^13.0.0",
     "yup": "^1.7.1"
